the sales department part over

--- a/index.html
+++ b/index.html
@@ -1,143 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Nomalize css -->
-    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/normalize.css" />
     <!-- fonts -->
-    <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="./styles/fonts.css" />
     <!-- General styles -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>5-dars vazifa</title>
-
-</head>
-<body>
-
-        <header>
-            <div class="navigation-flex">
-                <div class="navigation container">
-                    <a href="#"><img src="./images/logo.svg" alt="Okeypost company logo" width="189" height="47"></a>
-                    <nav class="nav">
-                        <ul>
-                            <li><a href="#">Как покупать</a></li>
-                            <li><a href="#">Распродажи</a></li>
-                            <li><a href="#">Цены</a></li>
-                            <li><a href="#">Помощь</a></li>
-                            <li><a href="#">Бонусы</a></li>
-                            <li><a href="#">Блог</a></li>
-                            <li><a href="#">Магазины</a></li>
-                        </ul>
-                        <div class="header-navigation-buttons">
-                           <a href="#"><img src="./images/user.svg">Вход </a>
-                           <a href="#">Связаться с нами</a></div>
-                        
-                    </nav>
-                </div>
-
+  </head>
+  <body>
+    <header>
+      <div class="navigation-flex">
+        <div class="navigation container">
+          <a href="#"
+            ><img
+              src="./images/logo.svg"
+              alt="Okeypost company logo"
+              width="189"
+              height="47"
+          /></a>
+          <nav class="nav">
+            <ul>
+              <li><a href="#">Как покупать</a></li>
+              <li><a href="#">Распродажи</a></li>
+              <li><a href="#">Цены</a></li>
+              <li><a href="#">Помощь</a></li>
+              <li><a href="#">Бонусы</a></li>
+              <li><a href="#">Блог</a></li>
+              <li><a href="#">Магазины</a></li>
+            </ul>
+            <div class="header-navigation-buttons">
+              <a href="#"><img src="./images/user.svg" />Вход </a>
+              <a href="#">Связаться с нами</a>
             </div>
-            <!-- the navigation part over -->
-
-            <div class="hero-background">
-                <div class="hero container">
-                    <div class="hero-texts">
-                        <h1 class="hero-title">Доставка товаров из Великобритании в Россию</h1>
-                        <p class="hero-discription">Начните экономить до 80% на шопинге. Регистрируйтесь в OkeyPost, чтобы покупать со скидками в UK одежду, обувь, гаджеты известных брендов и безопасно отправлять вещи в Россию.
-                        </p>
-                        <a class="hero-btn" href="#">Получить адрес в UK</a>
-                    </div>
-                    <div class="hero-img"><img src="./images/hero-img.png" alt="delivery by okeypost" width="572" height="571"></div>
-                </div>
-            </div>
-        </header>
-        <!-- the header part over -->
-
-        <section class="container">
-            <h3 class="second-part-title" >Насколько выгодно покупать?</h3>
-            <div class="second-part">
-                <img src="./images/strekla-left.svg" alt="Chap tomondagi mahsulotlarni korish uchun bosing" width="25">
-                <div class="block">
-                    <img src="./images/odejna.svg" alt="" width="52" height="52">
-                    <p>Одежда</p>
-                </div>
-                <div class="block">
-                    <img src="./images/electronic.svg" alt="" width="52" height="52">
-                    <p>Электроника</p>
-                </div>
-                <div class="block">
-                    <img src="./images/accessory.svg" alt="" width="52" height="52">
-                    <p>Аксессуары</p>
-                </div>
-                <div class="block">
-                    <img src="./images/for-details.svg" alt="" width="52" height="52">
-                    <p>Для детей</p>
-                </div>
-                <div class="block">
-                    <img src="./images/sport.svg" alt="" width="52" height="52">
-                    <p>Для спорта</p>
-                </div>
-                <div class="block">
-                    <img src="./images/kosmetika.svg" alt="" width="52" height="52">
-                    <p>Косметика</p>
-                </div>
-                <img src="./images/strelka-right.svg" alt="O'ng tomondagi mahsulotlarni korish uchun bosing" width="25">
-            </div>
-        </section>
-        <!-- the second-part over -->
-        <div class="cards container">
-            <div class="card">
-                <h2>Columbia Barlow Pass 550 Turbodown Jacket</h2>
-                <div class="btn-background">
-                    <img src="./images/russian.svg" alt="Russian flag" width="75" height="54">
-                    <div>
-                        <h3>Цена в России</h3>
-                        <p>7891,46₽</p>
-                    </div>
-                </div>
-                <div class="card-flex">
-                    <img src="./images/t-shirt.svg" alt="a picture of a flower in the middle of a black T-shirt">
-                    <img src="./images/strekla-left.svg" alt="">
-                </div>
-            </div>
-            <div class="second-card card">
-                <img src="./images/kurtka.png" alt="jacket picture" width="499" height="475">
-                <p>Срок доставки примерно 10 дней</p>
-                <h3>Вы экономите до <span> $119.56</span></h3>
-            </div>
-            <div class="card">
-                <h2>Доставка одежды из Великобритании  от <span class="color"> £7.79</span></h2>
-                <div class="btn-background">
-                    <img src="./images/america.svg" alt="Amaerica flag" width="75" height="54">
-                    <div>
-                        <h3>Цена в UK</h3>
-                        <p class="color">£80.62</p>
-                    </div>
-                </div>
-                <div class="card-flex">
-                    <img src="./images/pants.svg" alt="a picture of a flower in the middle of a black T-shirt">
-                    <img src="./images/strelka-right.svg" alt="">
-                </div>
-            </div>
+          </nav>
         </div>
-        <!-- the cards part over -->
-        <div class="blocks container">
-            <div class="block">
-                <img src="./images/Иконка-1.svg" alt="">
-                <p>Экономия до 70%</p>
-            </div>
-            <div class="block">
-                <img src="./images/Иконка-2.svg" alt="">
-                <p >Только подлинная продукция</p>
-            </div>
-            <div class="block">
-                <img src="./images/Иконка-3.svg" alt="">
-                <p>Оперативная доставка</p>
-            </div>
-            <div class="block">
-                <img src="./images/Иконка-4.svg" alt="">
-                <p>Огромный выбор товаров</p>
-            </div>
+      </div>
+      <!-- the navigation part over -->
+
+      <div class="hero-background">
+        <div class="hero container">
+          <div class="hero-texts">
+            <h1 class="hero-title">
+              Доставка товаров из Великобритании в Россию
+            </h1>
+            <p class="hero-discription">
+              Начните экономить до 80% на шопинге. Регистрируйтесь в OkeyPost,
+              чтобы покупать со скидками в UK одежду, обувь, гаджеты известных
+              брендов и безопасно отправлять вещи в Россию.
+            </p>
+            <a class="hero-btn" href="#">Получить адрес в UK</a>
+          </div>
+          <div class="hero-img">
+            <img
+              src="./images/hero-img.png"
+              alt="delivery by okeypost"
+              width="572"
+              height="571"
+            />
+          </div>
         </div>
-</body>
+      </div>
+    </header>
+    <!-- the header part over -->
+
+    <section class="container">
+      <h3 class="second-part-title">Насколько выгодно покупать?</h3>
+      <div class="second-part">
+        <img
+          src="./images/strekla-left.svg"
+          alt="Chap tomondagi mahsulotlarni korish uchun bosing"
+          width="25"
+        />
+        <div class="block">
+          <img src="./images/odejna.svg" alt="" width="52" height="52" />
+          <p>Одежда</p>
+        </div>
+        <div class="block">
+          <img src="./images/electronic.svg" alt="" width="52" height="52" />
+          <p>Электроника</p>
+        </div>
+        <div class="block">
+          <img src="./images/accessory.svg" alt="" width="52" height="52" />
+          <p>Аксессуары</p>
+        </div>
+        <div class="block">
+          <img src="./images/for-details.svg" alt="" width="52" height="52" />
+          <p>Для детей</p>
+        </div>
+        <div class="block">
+          <img src="./images/sport.svg" alt="" width="52" height="52" />
+          <p>Для спорта</p>
+        </div>
+        <div class="block">
+          <img src="./images/kosmetika.svg" alt="" width="52" height="52" />
+          <p>Косметика</p>
+        </div>
+        <img
+          src="./images/strelka-right.svg"
+          alt="O'ng tomondagi mahsulotlarni korish uchun bosing"
+          width="25"
+        />
+      </div>
+    </section>
+    <!-- the second-part over -->
+    <div class="cards container">
+      <div class="card">
+        <h2>Columbia Barlow Pass 550 Turbodown Jacket</h2>
+        <div class="btn-background">
+          <img
+            src="./images/russian.svg"
+            alt="Russian flag"
+            width="75"
+            height="54"
+          />
+          <div>
+            <h3>Цена в России</h3>
+            <p>7891,46₽</p>
+          </div>
+        </div>
+        <div class="card-flex">
+          <img
+            src="./images/t-shirt.svg"
+            alt="a picture of a flower in the middle of a black T-shirt"
+          />
+          <img src="./images/strekla-left.svg" alt="" />
+        </div>
+      </div>
+      <div class="second-card card">
+        <img
+          src="./images/kurtka.png"
+          alt="jacket picture"
+          width="499"
+          height="475"
+        />
+        <p>Срок доставки примерно 10 дней</p>
+        <h3>Вы экономите до <span> $119.56</span></h3>
+      </div>
+      <div class="card">
+        <h2>
+          Доставка одежды из Великобритании от <span class="color"> £7.79</span>
+        </h2>
+        <div class="btn-background">
+          <img
+            src="./images/america.svg"
+            alt="Amaerica flag"
+            width="75"
+            height="54"
+          />
+          <div>
+            <h3>Цена в UK</h3>
+            <p class="color">£80.62</p>
+          </div>
+        </div>
+        <div class="card-flex">
+          <img
+            src="./images/pants.svg"
+            alt="a picture of a flower in the middle of a black T-shirt"
+          />
+          <img src="./images/strelka-right.svg" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- the cards part over -->
+    <div class="blocks container">
+      <div class="block">
+        <img src="./images/Иконка-1.svg" alt="" />
+        <p>Экономия до 70%</p>
+      </div>
+      <div class="block">
+        <img src="./images/Иконка-2.svg" alt="" />
+        <p>Только подлинная продукция</p>
+      </div>
+      <div class="block">
+        <img src="./images/Иконка-3.svg" alt="" />
+        <p>Оперативная доставка</p>
+      </div>
+      <div class="block">
+        <img src="./images/Иконка-4.svg" alt="" />
+        <p>Огромный выбор товаров</p>
+      </div>
+    </div>
+
+    <div class="sales-department-background">
+      <div class="sales-department container">
+        <div class="sales-department-img">
+          <img
+            src="./images/sales-department.png"
+            alt=""
+            width="401"
+            height="404"
+          />
+        </div>
+        <div class="sales-department-text">
+          <h3>
+            Поручите нашим мастерам шопинга оформить заказы в английских
+            магазинах и освободите время для более важных дел
+          </h3>
+          <p>
+            Такой способ покупки также подойдёт, если магазин принимает только
+            английские карты.
+          </p>
+          <a href="#">Попробовать</a>
+        </div>
+      </div>
+    </div>
+    <!-- the end sales-department part over -->
+    
+  </body>
 </html>
