--- a/index.html
+++ b/index.html
@@ -267,5 +267,62 @@
     <div class="delivery-option-title container">
         <h3>Варианты доставки:</h3>
     </div>
+    <div class="delivery-option container">
+        <div class="delivery-option-img-and-text">
+            <img src="./images/svg/Иконка.svg" alt="">
+            <h3>Почта России</h3>
+        </div>
+        <div class="delivery-option-flex">
+            <p>Сроки:</p>
+            <p>10-14 дней</p>
+        </div>
+        <div class="delivery-option-flex">
+            <p>Стоимость доставки:</p>
+            <p>от £27.00</p>
+        </div>
+        <div class="delivery-option-flex class">
+            <p>Итого:</p>
+            <p>£41.99</p>
+        </div>
+        <img src="./images/Подробнее.svg" alt="">
+    </div>
+    <div class="delivery-option container">
+        <div class="delivery-option-img-and-text">
+            <img src="./images/svg/Иконка-1.svg" alt="">
+            <h3>EMS ПОЧТА РОССИЯ</h3>
+        </div>
+        <div class="delivery-option-flex">
+            <p>Сроки:</p>
+            <p>9-12 дней</p>
+        </div>
+        <div class="delivery-option-flex">
+            <p>Стоимость доставки:</p>
+            <p>от £40.00</p>
+        </div>
+        <div class="delivery-option-flex class">
+            <p>Итого:</p>
+            <p>£54.55</p>
+        </div>
+        <img src="./images/Подробнее.svg" alt="">
+    </div>
+    <div class="delivery-option container">
+        <div class="delivery-option-img-and-text">
+            <img src="./images/svg/Иконка-2.svg" alt="">
+            <h3>ПОЧТА РОССИИ МЕЛКИЕ ПАКЕТЫ</h3>
+        </div>
+        <div class="delivery-option-flex">
+            <p>Сроки:</p>
+            <p>10-14 дней</p>
+        </div>
+        <div class="delivery-option-flex">
+            <p>Стоимость доставки:</p>
+            <p>от £13.00</p>
+        </div>
+        <div class="delivery-option-flex class">
+            <p>Итого:</p>
+            <p>£90.50</p>
+        </div>
+        <img src="./images/Подробнее.svg" alt="">
+    </div>
   </body>
 </html>
