--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- fonts -->
     <link rel="stylesheet" href="./styles/fonts.css" />
     <!-- General styles -->
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.min.css" />
     <title>5-dars vazifa</title>
   </head>
   <body>
